--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </div>
             <div class="about-content">
                 <div class="about-image">
-                    <img src="image (1).jpeg" alt="About Kiran">
+                    <img src="image.jpeg" alt="About Kiran">
                 </div>
                 <div class="about-text">
                     <h3>I'm a passionate Full Stack Developer</h3>
